syntax = "proto3";

package server.options.mysql;
option go_package = "github.com/xhayamix/proto-gen-golang/pkg/domain/proto/server/options/mysql";

import "google/protobuf/descriptor.proto";

message MessageOption {
  message DDL {
    message Index {
      repeated string keys = 1;
    }
    repeated Index indexes = 1;
  }
  DDL ddl = 2;
}

message FieldOption {
  message DDL {
    bool pk = 1;

    enum ReferenceOption {
      RESTRICT = 0;
      CASCADE = 1;
      SET_NULL = 2;
      NO_ACTION = 3;
    }
    message FK {
      string table = 1;
      string column = 2;
      ReferenceOption onDelete = 3;
      ReferenceOption onUpdate = 4;
    }
    FK fk = 2;

    uint32 size = 3;

    bool nullable = 4;

    bool isAutoIncrement = 5;

    bool hasDefault = 6;
  }
  DDL ddl = 2;
}

extend google.protobuf.MessageOptions {
  MessageOption message = 55001;
}

extend google.protobuf.FieldOptions {
  FieldOption field = 55002;
}
